--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,31 @@
         <artifactId>selenium-api</artifactId>
         <version>4.22.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-chrome-driver</artifactId>
+        <version>4.22.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-edge-driver</artifactId>
+        <version>4.22.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-firefox-driver</artifactId>
+        <version>4.22.0</version>
+        <scope>test</scope>
+    </dependency>
 
 
 </dependencies>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-api -->
 
 </project>
+
+
+
+
